<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Media Collector</string>
    <string name="copyright_short">Media Collector (c) 2011\nfor more Informations visit\ncode.google.com/p/media-collection</string>
    
    <string name="BSNFD_title">BarcodeScanner not found</string>
    <string name="BSNFD_message">This application requires Barcode Scanner. Would you like to install it?</string>
    <string name="BSNFD_button_pos">Yes</string>
    <string name="BSNFD_button_neg">No</string>
    
    <string name="DROPBOX_cnc">Can\'t connect to your Dropbox!</string>
    <string name="SYNC_Loading">Synchronization...</string>
    <string name="SYNC_Error">Error during synchronization.</string>
    <string name="SYNC_Local">Local changes have been uploaded.</string>
    <string name="SYNC_Okay">The collections are up to date.</string>
    <string name="SYNC_Remote">The collections have been updated.</string>
    
    <string name="COLLECTION_Choose">Choose the Collection:</string>    
    <string name="COLLECTION_Audio">Audio</string>
    <string name="COLLECTION_Video">Video</string>
    <string name="COLLECTION_Books">Books</string>
    <string name="COLLECTION_Games">Games</string>
    <string name="COLLECTION_Wishlist">Wishlist</string>
    <string name="COLLECTION_search">Search</string>
    
    <string name="NAV_back">〈 back</string>
    
    <string name="SCAN_add">add to collection 〉</string>
    
    <string name="INFO_please_wait">Please Wait ...</string>
    <string name="INFO_we_comb_the_internet">Searching for your Product</string>
    <string name="INFO_nothing_found">Couldn\'t find your Product</string>
    
    <string name="EXCEPTION_unknown">Unknown Error</string>
    <string name="EXCEPTION_Fetching">Couldn\'t fetch Web-Data</string>
    <string name="EXCEPTION_Fetching_2_1">Couldn\'t find Search-Engine</string>
    <string name="EXCEPTION_Fetching_2_2"></string>
    <string name="EXCEPTION_Fechting_3">Couldn\'t find Cover</string>
    
    <string name="MEDIA_add">added to the database</string>
    <string name="MEDIA_del">deleted</string>
    <string name="MEDIA_Game">Game</string>
    <string name="MEDIA_Games_PC">PC-Game</string>
    <string name="MEDIA_Games_Board">Boardgame</string>
    <string name="MEDIA_Album">Album</string>
    <string name="MEDIA_Video">Movie</string>
    <string name="MEDIA_Book">Book</string>
    
    <string name="MENU_Options">Options</string>
    <string name="MENU_Details">View Details</string>
    <string name="MENU_Delete">Delete Entry</string>
    
    <string name="UNKNOWN_Artist">Unknown Artist</string>
    <string name="UNKNOWN_Author">Unknown Author</string>
    <string name="COLLECTION_browse">Browse Collections:</string>
    <string name="COLLECTION_sync">Sync Collection</string>
    <string name="COLLECTION_add">Add new Media</string>
    <string name="COLLECTION_searchentry">Search Entry:</string>
</resources>