<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/radialbackground" 
    android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent" 
                    android:id="@+id/relativeLayout1" 
                    android:layout_height="wrap_content">
        <ImageView android:id="@+id/imageView1" 
                   android:layout_width="wrap_content" 
                   android:layout_height="wrap_content" 
                   android:src="@drawable/logo_bird" 
                   android:layout_alignParentRight="true"></ImageView>
        <ImageView android:id="@+id/imageView2" 
                   android:layout_width="wrap_content" 
                   android:layout_height="wrap_content" 
                   android:src="@drawable/logo_schrift_middle"
                   android:layout_marginTop="55sp"
                   android:layout_marginLeft="20sp"></ImageView>
        <View android:id="@+id/spacer1"
              android:layout_width="match_parent"
              android:layout_height="0.1dip"
              android:layout_marginLeft="10sp"
              android:layout_marginRight="35sp"
              android:background="#44FFFFFF"
              android:layout_marginTop="80sp" />
    </RelativeLayout>
    <LinearLayout android:id="@+id/linearLayout1" 
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content"
                  android:layout_gravity="center">
        <LinearLayout android:id="@+id/addField" 
                      android:layout_width="wrap_content" 
                      android:layout_height="match_parent" 
                      android:orientation="vertical"
                      android:clickable="true">
            <ImageView android:id="@+id/imageView3" 
                       android:layout_width="wrap_content" 
                       android:layout_height="wrap_content" 
                       android:src="@drawable/ic_barcode"
                       android:layout_gravity="center"
                       android:layout_marginTop="20sp"></ImageView>
            <TextView android:id="@+id/textView1" 
                      android:layout_height="wrap_content" 
                      android:text="@string/COLLECTION_add" 
                      android:layout_width="wrap_content"
                      android:textColor="#ffff"
                      android:textSize="14sp"
                      android:layout_marginBottom="20sp"></TextView>
        </LinearLayout>
        <View android:id="@+id/spacer2"
              android:layout_width="0.1dip"
              android:layout_height="120dip"
              android:layout_marginLeft="30sp"
              android:layout_marginRight="30sp"
              android:background="#44FFFFFF" />
        <LinearLayout android:id="@+id/syncField" 
                      android:layout_width="wrap_content" 
                      android:layout_height="match_parent" 
                      android:orientation="vertical"
                      android:clickable="true">
            <ImageView android:id="@+id/imageView4" 
                       android:layout_width="wrap_content" 
                       android:layout_height="wrap_content" 
                       android:src="@drawable/ic_sync"
                       android:layout_gravity="center"
                       android:layout_marginTop="20sp"></ImageView>
            <TextView android:id="@+id/textView2" 
                      android:layout_height="wrap_content" 
                      android:text="@string/COLLECTION_sync" 
                      android:layout_width="wrap_content"
                      android:textColor="#ffff"
                      android:textSize="14sp"
                      android:layout_marginBottom="20sp"></TextView>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent" 
                    android:id="@+id/relativeLayout2" 
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="10sp" 
                    android:layout_marginRight="10sp">
        <View android:background="#44FFFFFF" 
              android:layout_width="match_parent"
              android:id="@+id/spacer1" 
              android:layout_height="0.1dip"></View>
        <TextView android:id="@+id/textView3" 
                  android:textColor="#ffff" 
                  android:textSize="12sp" 
                  android:layout_height="wrap_content" 
                  android:layout_marginTop="10.1sp"
                  android:layout_marginLeft="10sp"
                  android:text="@string/COLLECTION_browse" 
                  android:layout_width="wrap_content"></TextView>
    </RelativeLayout>
    <LinearLayout android:id="@+id/linearLayout4" 
                  android:layout_width="match_parent" 
                  android:layout_height="wrap_content" 
                  android:layout_marginRight="20sp"
                  android:layout_marginLeft="20sp" 
                  android:orientation="horizontal">
        <LinearLayout android:id="@+id/browseAudioField"
                      android:layout_width="wrap_content" 
                      android:layout_height="match_parent" 
                      android:orientation="vertical"
                      android:layout_marginRight="15sp"
                      android:layout_marginLeft="10sp"
                      android:clickable="true">
            <ImageView android:id="@+id/imageView5"
                       android:layout_width="wrap_content" 
                       android:layout_height="wrap_content" 
                       android:src="@drawable/ic_audio"
                       android:layout_gravity="center"
                       android:layout_marginTop="10sp"
                       android:layout_marginBottom="5sp"></ImageView>
            <TextView android:id="@+id/textView4" 
                      android:layout_height="wrap_content" 
                      android:text="@string/COLLECTION_Audio" 
                      android:layout_width="wrap_content"
                      android:textColor="#ffff"
                      android:textSize="14sp"
                      android:layout_gravity="center"
                      android:layout_marginBottom="5sp"></TextView>
        </LinearLayout>
        <LinearLayout android:id="@+id/browseVideoField" 
                      android:layout_width="wrap_content" 
                      android:layout_height="match_parent" 
                      android:orientation="vertical"
                      android:layout_marginRight="15sp"
                      android:layout_marginLeft="15sp"
                      android:clickable="true">
            <ImageView android:id="@+id/imageView6"  
                       android:layout_width="wrap_content" 
                       android:layout_height="wrap_content" 
                       android:src="@drawable/ic_video"
                       android:layout_gravity="center"
                       android:layout_marginTop="10sp"
                       android:layout_marginBottom="5sp"></ImageView>
            <TextView android:id="@+id/textView5" 
                      android:layout_height="wrap_content" 
                      android:text="@string/COLLECTION_Video" 
                      android:layout_width="wrap_content"
                      android:textColor="#ffff"
                      android:textSize="14sp"
                      android:layout_gravity="center"></TextView>
        </LinearLayout>
        <LinearLayout android:id="@+id/browseBooksField" 
                      android:layout_width="wrap_content" 
                      android:layout_height="match_parent" 
                      android:orientation="vertical"
                      android:layout_marginRight="15sp"
                      android:layout_marginLeft="15sp"
                      android:clickable="true">
            <ImageView android:id="@+id/imageView7"  
                       android:layout_width="wrap_content" 
                       android:layout_height="wrap_content" 
                       android:src="@drawable/ic_books"
                       android:layout_gravity="center"
                       android:layout_marginTop="10sp"
                       android:layout_marginBottom="5sp"></ImageView>
            <TextView android:id="@+id/textView6" 
                      android:layout_height="wrap_content" 
                      android:text="@string/COLLECTION_Books" 
                      android:layout_width="wrap_content"
                      android:textColor="#ffff"
                      android:textSize="14sp"
                      android:layout_gravity="center"></TextView>
        </LinearLayout>
        <LinearLayout android:id="@+id/browseGamesField" 
                      android:layout_width="wrap_content" 
                      android:layout_height="match_parent" 
                      android:orientation="vertical"
                      android:layout_marginRight="10sp"
                      android:layout_marginLeft="15sp"
                      android:clickable="true">
            <ImageView android:id="@+id/imageView8"  
                       android:layout_width="wrap_content" 
                       android:layout_height="wrap_content" 
                       android:src="@drawable/ic_games"
                       android:layout_gravity="center"
                       android:layout_marginTop="10sp"
                       android:layout_marginBottom="5sp"></ImageView>
            <TextView android:id="@+id/textView7" 
                      android:layout_height="wrap_content" 
                      android:text="@string/COLLECTION_Games" 
                      android:layout_width="wrap_content"
                      android:textColor="#ffff"
                      android:textSize="14sp"
                      android:layout_gravity="center"></TextView>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent" 
                    android:id="@+id/relativeLayout3" 
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="10sp" 
                    android:layout_marginRight="10sp">
        <View android:background="#44FFFFFF" 
              android:layout_width="match_parent"
              android:id="@+id/spacer1" 
              android:layout_height="0.1dip"></View>
        <TextView android:id="@+id/textView8" 
                  android:textColor="#ffff" 
                  android:textSize="12sp" 
                  android:layout_height="wrap_content" 
                  android:layout_marginTop="10.1sp"
                  android:layout_marginLeft="10sp"
                  android:text="@string/COLLECTION_searchentry" 
                  android:layout_width="wrap_content"></TextView>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" 
                    android:id="@+id/relativeLayout4" 
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20sp"
                    android:layout_marginLeft="20sp">
        <EditText android:text="" 
                  android:id="@+id/searchText" 
                  android:layout_width="fill_parent" 
                  android:layout_height="45sp"
                  android:layout_marginRight="110sp"
                  android:singleLine="true"></EditText>
        <Button android:text="@string/COLLECTION_search" 
                android:id="@+id/searchButton" 
                android:layout_width="100sp" 
                android:layout_height="42sp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="2sp"></Button>
    </RelativeLayout>
</LinearLayout>
